2008-02-08  Juraj Skripsky  <js@hotfeet.ch>

	* Random.cs (Next): Use rounding (via implicit conversion) only on
	positive values. Fixes bug 359918.

2008-02-03  Sebastien Pouliot  <sebastien@ximian.com>

	* Environment.cs: Remove unused method found with Gendarme.

2008-02-02  Gert Driesen  <drieseng@users.sourceforge.net>

	* Variant.cs: Fixed line endings.
	* MonoType.cs: Fixed parameter name for ArgumentException to match MS.

2008-01-29  Zoltan Varga  <vargaz@gmail.com>

	* Type.cs (MakeGenericType): Fix exception message.

2008-01-29  Jb Evain  <jbevain@novell.com>

	* AppDomain.cs: add SL overload of DefineDynamicAssembly.

2008-01-29  Marek Safar  <marek.safar@gmail.com>

	* Type.cs (MakeGenericType): More argument checks. Fixes #356863 by
	 Sanghyeon Seo.

2008-01-25  Rodrigo Kumpera  <rkumpera@novell.com>

	* MonoType.cs (InvokeMember): Fixed exceptions arguments for last comit.

2008-01-24  Rodrigo Kumpera  <rkumpera@novell.com>

	* MonoType.cs (InvokeMember): Check for parameters without default value which
	the supplied argument is Missing.Value. Fixes one of the issues of #348522.

2008-01-21  Sebastien Pouliot  <sebastien@ximian.com>

	* DateTimeOffset.cs: Avoid NRE on bad cast if null is provided to
	Equals(object). Found using Gendarme.

2008-01-16  Zoltan Varga  <vargaz@gmail.com>

	* DateTimeOffset.cs: Fix warnings.

2008-01-15  Stephane Delcroix  <sdelcroix@novell.com>

	* DateTimeOffset.cs: ParseExact: parse f, F, s too.

2008-01-15  Stephane Delcroix  <sdelcroix@novell.com>

	* DateTimeOffset.cs: ParseExact: honor the DateTimeStyles parameter.

2008-01-15  Zoltan Varga  <vargaz@gmail.com>

	* AppDomainSetup.cs Buffer.cs Action.cs Array.cs BadImageFormatException.cs Byte.cs
	Attribute.cs _AppDomain.cs Boolean.cs AppDomain.cs: Fix some argument names to be 
	consistent with MS.

2008-01-14  Sephane Delcroix  <sdelcroix@novell.com>

	* DateTimeOffset.cs: start refactoring DoParse.

2008-01-14  Zoltan Varga  <vargaz@gmail.com>
