@@ -118,8 +118,10 @@ namespace System
 				throw new ArgumentOutOfRangeException (Locale.GetText (
 					"Min value is greater than max value."));
 
-			uint diff = (uint)(maxValue - minValue);
-			if (diff == 0)
+			// special case: a difference of one (or less) will always return the minimum
+			// e.g. -1,-1 or -1,0 will always return -1
+			uint diff = (uint) (maxValue - minValue);
+			if (diff <= 1)
 				return minValue;
 
 			return (int)(Sample () * diff) + minValue;
